# finegrain-toolbox

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/finegrain_toolbox/: dc.py  hf.py  image.py  models.py  torch.py  types.py  utils.py
src/finegrain_toolbox/flux/: __init__.py  latents.py  model.py  positional_embedding.py  prompt.py
src/finegrain_toolbox/processors/: product_placement.py
src/finegrain_toolbox/sd/: __init__.py  model.py  prompt.py
typings/diffusers/: __init__.pyi  _modelmixin.pyi  loaders.pyi
typings/diffusers/utils/: hub_utils.pyi
typings/huggingface_hub/: __init__.pyi
typings/safetensors/: torch.pyi
typings/transformers/: __init__.pyi
